--- a/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Practica_Obligatoria/13_Practica_Obligatoria_Python_Basics_I.ipynb
+++ b/01_Programacion_basica_y_Ramp-Up/Sprint_01/Unidad_02/Practica_Obligatoria/13_Practica_Obligatoria_Python_Basics_I.ipynb
@@ -67,9 +67,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buenas tardes, bienvenido al servicio de pedido online, el precio de nuestra pizzas es de 8,95 para la familiar o de 9,90 para la mediana \n",
+      "Le mandaremos las 2 pizzas a la dirección fr. Serán 18.85. Muchas gracias por su pedido.\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Buenas tardes, bienvenido al servicio de pedido online, el precio de nuestra pizzas es de 8,95 para la familiar o de 9,90 para la mediana \")\n",
     "pizz_familiar = input(\"¿Cuántas pizzas  familiares desea?\")\n",
@@ -103,10 +112,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gracias, sus números son1,2,4\n",
+      "1\n",
+      "4\n",
+      "7\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "entrada = input(\"Introduzca 3 números separados por comas\")\n",
+    "print(f\"gracias, sus números son{entrada}\")\n",
+    "\n",
+    "lista = entrada.split(',')\n",
+    "lista_ints = [\n",
+    "    int(lista[0]),\n",
+    "    int(lista[1]),\n",
+    "    int(lista[2]),\n",
+    "]\n",
+    "print(min(lista_ints))\n",
+    "print(max(lista_ints))\n",
+    "print(sum(lista_ints))\n",
+    "print(max(lista_ints) - min(lista_ints) == sum(lista_ints)/5 )"
+   ]
   }
  ],
  "metadata": {
@@ -125,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.0"
   },
   "orig_nbformat": 4
  },
